--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* The following CSS statements are to designing the Calculator-site user interface */
+
 body {
   background: linear-gradient(to bottom, white, rgb(226, 255, 211));
   display: flex;
